--- a/python_para_data_science.ipynb
+++ b/python_para_data_science.ipynb
@@ -205,7 +205,7 @@
       "metadata": {
         "id": "GK77H828M-Zk"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -217,7 +217,7 @@
       "metadata": {
         "id": "Dp76q10g-wIH"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -234,7 +234,7 @@
         "id": "ORsL_R5Z_TFP",
         "outputId": "1d34d8a7-bb16-4dbb-89e4-1cec733412c5"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -267,7 +267,7 @@
       "metadata": {
         "id": "Y4o2AvhWNBdM"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -278,7 +278,7 @@
       "metadata": {
         "id": "9fXfsVnANBiG"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -302,7 +302,7 @@
       "metadata": {
         "id": "a2zJCXNUND9X"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,7 +319,7 @@
         },
         "outputId": "767d01a8-2b0c-4c3b-c3d5-db13e23c30c3"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -348,7 +348,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -411,30 +411,69 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "notas = {'Trimestre 1': 9.5, 'Trimestre 2': 8, 'Trimestre 3': 7 }"
+      ],
       "metadata": {
         "id": "WQ-pCgdaMOlc"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "suma = 0\n",
+        "for s in notas.values():\n",
+        "  suma += s\n",
+        "  print(suma)"
+      ],
       "metadata": {
-        "id": "GU-HvC-QMOoS"
+        "id": "GU-HvC-QMOoS",
+        "outputId": "ff338770-199d-4ffd-ec2b-a2516e0e0708",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "9.5\n",
+            "17.5\n",
+            "24.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio = sum(notas.values()) / len(notas)\n",
+        "promedio"
+      ],
       "metadata": {
-        "id": "qKEyjY2bMOqj"
+        "id": "qKEyjY2bMOqj",
+        "outputId": "910ca9e0-5684-4bbd-b77f-9524f2cb2012",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.166666666666666"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 9
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -449,21 +488,60 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "help(round)"
+      ],
       "metadata": {
-        "id": "c7Cn5XFfMP5E"
+        "id": "c7Cn5XFfMP5E",
+        "outputId": "bfeb1103-6221-4840-9a60-3ab320b16633",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Help on built-in function round in module builtins:\n",
+            "\n",
+            "round(number, ndigits=None)\n",
+            "    Round a number to a given precision in decimal digits.\n",
+            "    \n",
+            "    The return value is an integer if ndigits is omitted or None.  Otherwise\n",
+            "    the return value has the same type as the number.  ndigits may be negative.\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio = round(promedio, 1)\n",
+        "promedio"
+      ],
       "metadata": {
-        "id": "eVNPFr0pMRWl"
+        "id": "eVNPFr0pMRWl",
+        "outputId": "d84d92d2-b642-4760-9e0d-5d9d4ab7dfb6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "8.2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
     },
     {
       "cell_type": "markdown",
