Funciones con Parametros

--- a/python_para_data_science.ipynb
+++ b/python_para_data_science.ipynb
@@ -430,10 +430,10 @@
       ],
       "metadata": {
         "id": "GU-HvC-QMOoS",
-        "outputId": "ff338770-199d-4ffd-ec2b-a2516e0e0708",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ff338770-199d-4ffd-ec2b-a2516e0e0708"
       },
       "execution_count": 7,
       "outputs": [
@@ -456,10 +456,10 @@
       ],
       "metadata": {
         "id": "qKEyjY2bMOqj",
-        "outputId": "910ca9e0-5684-4bbd-b77f-9524f2cb2012",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "910ca9e0-5684-4bbd-b77f-9524f2cb2012"
       },
       "execution_count": 9,
       "outputs": [
@@ -493,10 +493,10 @@
       ],
       "metadata": {
         "id": "c7Cn5XFfMP5E",
-        "outputId": "bfeb1103-6221-4840-9a60-3ab320b16633",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bfeb1103-6221-4840-9a60-3ab320b16633"
       },
       "execution_count": 10,
       "outputs": [
@@ -524,10 +524,10 @@
       ],
       "metadata": {
         "id": "eVNPFr0pMRWl",
-        "outputId": "d84d92d2-b642-4760-9e0d-5d9d4ab7dfb6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d84d92d2-b642-4760-9e0d-5d9d4ab7dfb6"
       },
       "execution_count": 11,
       "outputs": [
@@ -581,30 +581,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def promedio():\n",
+        "  calculo = (10+9+7)/3\n",
+        "  print(calculo)"
+      ],
       "metadata": {
         "id": "WgWoULpnMSrT"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio()"
+      ],
       "metadata": {
-        "id": "VKfg0zkDMStp"
+        "id": "VKfg0zkDMStp",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "ea50cbe3-39ec-4a38-b8cc-df1ec233967e"
       },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "04YIHBu-MTNB"
-      },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.666666666666666\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -624,25 +633,45 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def promedio(nota_1,nota_2,nota_3):\n",
+        "  calculo = (nota_1+nota_2+nota_3)/3\n",
+        "  print(calculo)"
+      ],
       "metadata": {
         "id": "1QHJXCYsMUx3"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio(10,9,7)"
+      ],
       "metadata": {
-        "id": "txkkIwheMU0n"
+        "id": "txkkIwheMU0n",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "3607f121-8a34-4675-c398-eb77afe8aebb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.666666666666666\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio(nota)"
+      ],
       "metadata": {
         "id": "Pq88ApQEMWK9"
       },
