--- a/python_para_data_science.ipynb
+++ b/python_para_data_science.ipynb
@@ -705,35 +705,93 @@
       "metadata": {
         "id": "U4MlTO9ucAKc"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "def promedio(lista):\n",
+        "  calculo = sum(lista)/len(lista)\n",
+        "  print(calculo)"
+      ],
       "metadata": {
         "id": "ZrqyDBNFMYOK"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "promedio(notas)\n"
+      ],
       "metadata": {
-        "id": "wEkixagwMY2E"
+        "id": "wEkixagwMY2E",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fa240c02-91bf-4c49-bef4-4d8afe8d1b24"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.375\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "media = promedio(notas)"
+      ],
       "metadata": {
-        "id": "60Gvxd9tMa5d"
+        "id": "60Gvxd9tMa5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c48f660e-7be4-4299-ece7-b307e20ab90a"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "8.375\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "type(media)"
+      ],
+      "metadata": {
+        "id": "-U9na79IM-pv",
+        "outputId": "5398c747-330a-4e3f-f7bf-bc89d3a5e099",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "NoneType"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -744,6 +802,34 @@
       "metadata": {
         "id": "skMq7d0_xHND"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calculo"
+      ],
+      "metadata": {
+        "id": "OjCYOz3MN4Ey",
+        "outputId": "993e3437-8849-4c2d-86cf-85ef82f0d763",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "name 'calculo' is not defined",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-25-358730cc7909>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcalculo\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'calculo' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -789,7 +875,7 @@
       "metadata": {
         "id": "GlWdnX7Ubgl3"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
